# trie-test

./: .gitignore  Cargo.toml  README.md
metadata/: rococo.rs
rust/: Cargo.toml
rust/src/: lib.rs  state-proof-example.rs  state_proof_example.rs
src/: main.rs
trie-go-test/: go.mod  go.sum  sub_state_proof_test.go  util.go
trie-rs-test/: Cargo.toml
trie-rs-test/src/: lib.rs  sub_state_proof_test.rs
