[package]
name = "state-proof-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt.git", branch = "master"}
mmr-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.40"}

futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.40" }
tracing-subscriber = "0.3.11"
hex-literal = "0.3.1"
beefy-light-client = { git = "https://github.com/octopus-network/beefy-light-client.git"}
serde = "1.0"
serde_derive = "1.0"
hash256-std-hasher ={version = "0.15.2"}
hash-db = { version = "0.16.0", default-features = false}
# hash-db = { version = "0.16.0", default-features = false }
# tendermint
tendermint = { version = "0.28"}